{
  "version": 4,
  "terraform_version": "1.0.8",
  "serial": 105,
  "lineage": "4ff957f8-2798-4146-8aad-0405c7d58ea9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "main_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0024a646f6e2609a5",
            "domain": "vpc",
            "id": "eipalloc-0c5dab02",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-030ba8f909c2f2b9f",
            "private_dns": "ip-10-0-0-42.eu-central-1.compute.internal",
            "private_ip": "10.0.0.42",
            "public_dns": "ec2-18-157-92-155.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.157.92.155",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "My EIP"
            },
            "tags_all": {
              "Name": "My EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-058e6df85cfc7760b",
            "arn": "arn:aws:ec2:eu-central-1:983489483706:instance/i-02db4f89478b86647",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02db4f89478b86647",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "MyKeyPair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0745827b7053ac662",
            "private_dns": "ip-10-0-31-141.eu-central-1.compute.internal",
            "private_ip": "10.0.31.141",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08d65be5fd8fed94d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-073aeb36e0e693cb8",
            "tags": {
              "Name": "My Private EC2 Instance"
            },
            "tags_all": {
              "Name": "My Private EC2 Instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0bfbe0d7df97a5ddc"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh",
            "aws_subnet.private_subnet_a",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-058e6df85cfc7760b",
            "arn": "arn:aws:ec2:eu-central-1:983489483706:instance/i-018cbc8e8e2398549",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-018cbc8e8e2398549",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "MyKeyPair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-016a4c6502fa3a847",
            "private_dns": "ip-10-0-0-219.eu-central-1.compute.internal",
            "private_ip": "10.0.0.219",
            "public_dns": "ec2-3-69-232-60.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.69.232.60",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03305bcda75c0339e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05f774c62c788b125",
            "tags": {
              "Name": "My Public EC2 Instance"
            },
            "tags_all": {
              "Name": "My Public EC2 Instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0bfbe0d7df97a5ddc"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh",
            "aws_subnet.public_subnet_a",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:983489483706:internet-gateway/igw-011962a2dcd565ebf",
            "id": "igw-011962a2dcd565ebf",
            "owner_id": "983489483706",
            "tags": {
              "Name": "Main Internet Gateway"
            },
            "tags_all": {
              "Name": "Main Internet Gateway"
            },
            "vpc_id": "vpc-07c0f316abd80f922"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main_ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c5dab02",
            "connectivity_type": "public",
            "id": "nat-098f55e1010e6fcc0",
            "network_interface_id": "eni-030ba8f909c2f2b9f",
            "private_ip": "10.0.0.42",
            "public_ip": "18.157.92.155",
            "subnet_id": "subnet-05f774c62c788b125",
            "tags": {
              "Name": "My Nat Gateway"
            },
            "tags_all": {
              "Name": "My Nat Gateway"
            }
          },
          "dependencies": [
            "aws_eip.main_eip",
            "aws_subnet.public_subnet_a",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:983489483706:route-table/rtb-0fe74adc5ad6e344d",
            "id": "rtb-0fe74adc5ad6e344d",
            "owner_id": "983489483706",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-098f55e1010e6fcc0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Route Table"
            },
            "tags_all": {
              "Name": "Private Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c0f316abd80f922"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.main_ngw",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:983489483706:route-table/rtb-0fc0762c986a399eb",
            "id": "rtb-0fc0762c986a399eb",
            "owner_id": "983489483706",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-011962a2dcd565ebf",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table"
            },
            "tags_all": {
              "Name": "Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c0f316abd80f922"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main_ig",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08c58aca0cfe1cf58",
            "route_table_id": "rtb-0fe74adc5ad6e344d",
            "subnet_id": "subnet-073aeb36e0e693cb8"
          },
          "dependencies": [
            "aws_internet_gateway.main_ig",
            "aws_nat_gateway.main_ngw",
            "aws_route_table.private_rt",
            "aws_route_table.public_rt",
            "aws_subnet.private_subnet_a",
            "aws_subnet.public_subnet_a",
            "aws_vpc.main_vpc",
            "aws_eip.main_eip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0256f336c3c4ada04",
            "route_table_id": "rtb-0fc0762c986a399eb",
            "subnet_id": "subnet-05f774c62c788b125"
          },
          "dependencies": [
            "aws_internet_gateway.main_ig",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_a",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:983489483706:security-group/sg-0bfbe0d7df97a5ddc",
            "description": "Allow SSH inbound traffic/ all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All Outbound from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bfbe0d7df97a5ddc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "983489483706",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "My Security Group"
            },
            "tags_all": {
              "Name": "My Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c0f316abd80f922"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:983489483706:subnet/subnet-073aeb36e0e693cb8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.16.0/20",
            "id": "subnet-073aeb36e0e693cb8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "983489483706",
            "tags": {
              "Name": "My Private Subnet A"
            },
            "tags_all": {
              "Name": "My Private Subnet A"
            },
            "vpc_id": "vpc-07c0f316abd80f922"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:983489483706:subnet/subnet-05f774c62c788b125",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-05f774c62c788b125",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "983489483706",
            "tags": {
              "Name": "My Public Subnet A"
            },
            "tags_all": {
              "Name": "My Public Subnet A"
            },
            "vpc_id": "vpc-07c0f316abd80f922"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:983489483706:vpc/vpc-07c0f316abd80f922",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-089986c59185127e5",
            "default_route_table_id": "rtb-0d411a991f0d7d576",
            "default_security_group_id": "sg-00bbf55db29da1468",
            "dhcp_options_id": "dopt-b91374d3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-07c0f316abd80f922",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d411a991f0d7d576",
            "owner_id": "983489483706",
            "tags": {
              "Name": "Main VPC"
            },
            "tags_all": {
              "Name": "Main VPC"
            }
          }
        }
      ]
    }
  ]
}